[package]
name = "warden"
version = "0.0.1"
edition = "2021"
description = "Dynamic task runner service using webhook events"
default-run = "warden"

[lib]
path = "src/lib.rs"

[[bin]]
name = "warden"
path = "src/main.rs"

[dependencies]
axum = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
